# aury

./: .gitignore  Cargo.toml  README.md  V0.1-ROADMAP.md  V0.2-ROADMAP.md  V0.3-ROADMAP.md  aury-proposal.md
.pi/: taskplane.json
.pi-subagents/artifacts/: 8ef4532e_reviewer_0_input.md  8ef4532e_reviewer_0_transcript.jsonl  931c4178_reviewer_0_input.md  931c4178_reviewer_0_meta.json  931c4178_reviewer_0_output.md  931c4178_reviewer_0_transcript.jsonl
eval/: corpus.json  report.csv  report.md
eval/baseline/: calculator.py  gcd.py
eval/record/: generate.py  tasks.json
examples/: broken.aury  buggy-max.aury  calculator.aury  effects-bad.aury  rng-demo.aury  structs.aury
examples/agent/: alias-region.aury  clock-stamp.aury  dice.aury  effect-leak.aury  false-property.json  log-scope.aury  loop-factorial.json  mean-f64.json  parse-classify.json  region-escape.aury  unterminated.aury  vec-pipeline.aury  vec-use-after-move.aury
moon-distance/: README.md  build.py  moon-distance.aury  moon-distance.json  run-now.sh  start-dashboard.sh  wasm-toolchain.sh
moon-distance/web/: app.js  index.html  server.mjs  styles.css
programs/: bench-moon.aury  bench-moon.json  bench.aury  bench.json  build_moon.py  moon-diagram.html  moon.aury  moon.json  strdemo.aury  strdemo.json
runtime/: aury_rt.c
src/: ast.rs  diagram.rs  eval.rs  generated.rs  id.rs  interp.rs  json.rs  lib.rs  loop_driver.rs  lower.rs  lower_sketch.rs  main.rs  repair.rs  sexpr.rs  spec.rs  types.rs  validate.rs  value_io.rs
tests/: arena_accounting.c  integration.rs  native_parity.aury
(+21 files in other folders)
