[package]
name = "aury"
version = "0.0.2"
edition = "2021"
description = "Aury v0.2: s-expression IR with Merkle IDs, no-inference validation, repair protocol, intent verification"
license = "MIT"

[lib]
name = "aury"
path = "src/lib.rs"

[[bin]]
name = "aury"
path = "src/main.rs"

[dependencies]
sha2 = "0.10"
serde = "1"
serde_json = "1"

[profile.release]
debug = true
